include/libmeme/cisml.pxd


    cdef void sort_matched_elements(
        bool sort_by_pvalue,
        int num_elements,
        MATCHED_ELEMENT_T **elements
    )

    cdef void print_cisml_start(
        FILE* out,
        char *program_name,
        bool print_header,
        const char *stylesheet,
        bool print_namespace
    )
    cdef void print_cisml_end(FILE* out)
    cdef void print_cisml_parameters(FILE *out, CISML_T *cisml)
    cdef void print_cisml(
    		FILE* out,
    		CISML_T *cisml,
    		bool print_header,
    		const char *stylesheet,
    		bool print_namespace
    )
    cdef void print_cisml_start_pattern(
        CISML_T *cisml,
        FILE *out,
        PATTERN_T *pattern
    )
    cdef void print_cisml_end_pattern(FILE *out)
    cdef void print_cisml_scanned_sequences(
        CISML_T *cisml,
        FILE *out,
        int num_seqs,
        SCANNED_SEQUENCE_T **sequences
    )
    cdef void print_cisml_scanned_sequence_start(
        CISML_T *cisml,
        FILE *out,
        SCANNED_SEQUENCE_T *seq
    )
    cdef void print_cisml_scanned_sequence_end(FILE *out)

    cdef bool print_full_results(
        CISML_T *cisml,
        char *output_dirname,
        char *xml_filename,
        char *html_filename,
        char *text_filename,
        char *gff_filename,
        bool allow_clobber,
        bool print_namespace
    )
    cdef bool print_cisml_as_text(CISML_T *cisml)
    cdef CISML_T* read_cisml(const char* cisml_filename)
